src/objects/echosign_dev1__SIGN_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Do_No_Overwrite_Existing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Overwrite Existing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Do_Not_Write_Empty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do Not Write Empty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Input_Type__c</fullName>
        <label>Input Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>List</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__Map_on_Events__c</fullName>
        <label>Map on Events</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Cancelled / Declined</fullName>
                </value>
                <value>
                    <fullName>Out for Approval</fullName>
                </value>
                <value>
                    <fullName>Out for Signature</fullName>
                </value>
                <value>
                    <fullName>Signed</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Approval</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Signature</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Acceptance</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Form-Filling</fullName>
                </value>
                <value>
                    <fullName>Waiting for Counter-Delivery</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Form-Filled</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Out for Acceptance</fullName>
                </value>
                <value>
                    <fullName>Out for Form-Filling</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>echosign_dev1__SIGN_Object_Mapping__c</fullName>
        <label>Adobe Sign Object Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Object_Mapping__c</referenceTo>
        <relationshipLabel>Adobe Sign Field Mappings</relationshipLabel>
        <relationshipName>Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Source__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Source Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Type__c</fullName>
        <label>Source Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EchoSign Form Field</fullName>
                    <default>true</default>
                    <label>EchoSign Form Field</label>
                </value>
                <value>
                    <fullName>Constant</fullName>
                </value>
                <value>
                    <fullName>Agreement Field</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Field Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Target Salesforce Field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>